fix: padding card tanggapan in responsive

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -296,6 +296,9 @@ a.btn.btn-lapor:active {
         font-size: 20px;
         line-height: 97.39%;
     }
+    .page-content .row .col-12 .row .col-6:last-child .card .card-body {
+        padding: 2rem 0.8rem !important;
+    }
 }
 @media only screen and (min-width: 373px) and (max-width: 430px) {
     .margin-form {
@@ -539,6 +542,9 @@ a.btn.btn-lapor:active {
         font-weight: bold;
         font-size: 20px;
         line-height: 97.39%;
+    }
+    .page-content .row .col-12 .row .col-6:last-child .card .card-body {
+        padding: 2rem 0.8rem !important;
     }
 }
 @media only screen and (min-width: 2000px) {
